--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "The Rain Witch Theme",
   "description": "An elegant dark theme inspired by Tonelico from Fate/Grand Order, featuring warm golden accents and soft blue tones",
   "version": "0.0.1",
-  "publisher": "nduc4",
+  "publisher": "torikkyun",
   "repository": {
     "type": "git",
     "url": "https://github.com/torikkyun/the-rain-witch-theme"
